--- a/user/package.json
+++ b/user/package.json
@@ -1,7 +1,7 @@
 {
   "name": "BaloShop",
   "version": "0.1.0",
-  "proxy": "http://localhost:5000",
+  "proxy": "https://api-lvtn.vercel.app",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.4",
